--- a/src/components/Contact.module.css
+++ b/src/components/Contact.module.css
@@ -1,5 +1,5 @@
 .contact_form_container {
-    background: linear-gradient(to right, #ff416c, #7873f5);
+    background:  #88b58d;
     padding: 30px;
     border-radius: 8px;
     max-width: 400px;
@@ -21,7 +21,6 @@
   
   .contact_input,
   .contact_textarea {
-    margin-bottom: 15px;
     padding: 10px;
     border: 1px solid white;
     border-radius: 4px;
@@ -39,18 +38,48 @@
     resize: none;
   }
   
+
+  .horizontal input{
+    width: 80%;
+  }
+  .horizontal p{
+    margin-bottom: 15px;
+    text-align: end;
+    font-size: 10px;
+    margin-right: 30px;
+  }
+
+
+
+.horizontal_wide textarea{
+        width: 80%;
+}
+.horizontal_wide p{
+    margin-bottom: 15px;
+    text-align: end;
+    font-size: 10px;
+    margin-right: 30px;
+}
   .contact_button {
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
-    background: linear-gradient(to right, #ff416c, #7873f5);
-    
+    background:  #4793AF;
+    width: 50%;
+    margin: 0 auto;
     color: white;
     cursor: pointer;
     font-size: 16px;
+  }
+  .contact_button:hover{
+    background:#03448e ;
   }
   
   .contact_button:hover {
     opacity: 0.8;
   }
-  
+  .error_message{
+    margin: 0;
+    font-size: 10px;
+    color: #d00505;
+  }
